# aptimyz-demand-forecast

./: .env  .gitignore  README.md  README_Dev.md  justfile  main.py  pyproject.toml
.clinerules/: project.md
automl/: README_Sagemaker.md
automl/pipelines/: inference_pipeline_definition.json  training_pipeline_definition.json
automl/scripts/: data_quality_check.py
automl/security/: pipeline-service-role-policy.json  training-execution-role-policy.json
notebooks/: 0_eda.py  1_autogluon_quickstart.py  1_sagemaker_automl.ipynb  1_sagemaker_model.ipynb  2_aptimyz_eda_v1.ipynb  2_sagemaker_deployment.py  3_forecast_evaluation.ipynb  4_whole_process.ipynb
notebooks/archive/: 0_dataset_prep.ipynb  2_sagemaker_deployment.py
scripts/: eda.py  fev_helpers.py  plot_series_train_test_split.py  plot_series_with_predictions.py  predictions_helpers.py  train_sagemaker.py  update_iam_policy.sh
