[project]
name = "aptimyz-demand-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.4.0",
]

[dependency-groups]
dev = [
    "boto3>=1.40.28",
    "duckdb>=1.3.2",
    "kaggle>=1.7.4.5",
    "marimo[sql]>=0.15.2",
    "pandas>=2.3.2",
    "ruff>=0.13.0",
    "sagemaker-core>=1.0.59",
    "seaborn>=0.13.2",
]
