[project]
name = "aptimyz-demand-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.4.0",
    "fev>=0.6.0",
    "gdrive-fsspec>=0.2.0",
    "joblib>=1.5.2",
    "sagemaker>=2.251.1",
]

[dependency-groups]
dev = [
    "boto3>=1.40.28",
    "duckdb>=1.3.2",
    "jupysql>=0.11.1",
    "jupyterlab>=4.4.7",
    "kaggle>=1.7.4.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.0",
    "s3fs>=0.4.2",
    "sagemaker-core>=1.0.59",
    "seaborn>=0.13.2",
]
